Fixed CORS. Added degrees stuff.
